...
            "state" : "translated",
            "value" : "导出所有数据…"
          }
        }
      }
    },
    "File" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Datei"
...
            "state" : "translated",
            "value" : "新名称"
          }
        }
      }
    },
    "New Note" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Neue Notiz"
...
